--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 :root {
     --primary-color: #3361E0;
     --secondary-color: #0A0A0A;
-    --background-color: #E8E8EA;
+    --background-color: #e9e9e9;
     --dark-color: #4E3E34;
     --text-color: #FFFFFF;
     --sidebar-width: 250px;
